<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:keepScreenOn="true"
        android:text="@string/title"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:hint="@string/search_field_input_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group_for_result_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/popular" />

        <RadioButton
            android:id="@+id/radio_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent" />

        <RadioButton
            android:id="@+id/radio_mixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mixed" />
    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:theme="@style/SpecialButton" />

</LinearLayout>
